--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,13 +1,13 @@
-pandas
-numpy
-scikit-learn
-tensorflow
-keras_tuner
-warnings
-datetime
-streamlit
-yfinance
-yahooquery
-plotly
-matplotlib
+pandas>=1.1.5,<2.1
+numpy>=1.19.5,<1.24
+scikit-learn>=0.24,<1.2
+tensorflow>=2.5,<3.0
+keras_tuner>=1.1.0,<1.2
+datetime 
+streamlit>=1.4,<2.0
+yfinance>=0.1.72,<0.3
+yahooquery>=2.2,<3.0
+plotly>=5.0,<6.0
+matplotlib>=3.3,<4.0
+
 # -e .
