--- a/Streamlit/requirements.txt
+++ b/Streamlit/requirements.txt
@@ -1,13 +1,15 @@
-pandas>=1.1.5,<2.1
-numpy>=1.19.5,<1.24
-scikit-learn>=0.24,<1.2
-tensorflow>=2.14.0,<2.15.0
+streamlit==1.39.0
+numpy==2.1.2
+matplotlib==3.7.1
+pandas==2.2.3
+scikit-learn==1.5.2
+tensorflow>=2.14.0,<2.16.0
 keras_tuner>=1.1.0,<1.2
 datetime 
-streamlit>=1.4,<2.0
 yfinance>=0.1.72,<0.3
 yahooquery>=2.2,<3.0
 plotly>=5.0,<6.0
-matplotlib>=3.3,<4.0
+setuptools
+wheel
 
 # -e .
